welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: Missing closing brace `}' assumed here
override def run(i=Int) {
^Array1:2: error: expected start of definition
override def run(i=Int) {
         ^Array1:11: error: Missing closing brace `}' assumed here
	for (i<- 0 to getMondeHauteur()-1){
        ^