welcome.lessons.welcome.array.basics.Array1.scala.code
override def run(i=Int) {
	
	var T= new Array[color](getMondeHauteur())

	
	for (j<- 0 to getMondeHauteur()-1){
		
	
	
	for (i<- 0 to getMondeHauteur()-1){

		T[i]=getCouleurSol()
		
		avance()
		
	}

           

	avance()
	avance()
	droite()
	avance()
	droite()
	baisseBrosse()	
	setCouleurBrosse(T[j]=Color)
	avance()
	leveBrosse()